# ChangeLog for sys-kernel/gentoo-sources
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/ChangeLog,v 1.1484 2015/01/31 00:21:53 hwoarang Exp $

  31 Jan 2015; Markos Chandras <hwoarang@gentoo.org>
  gentoo-sources-3.10.63.ebuild, gentoo-sources-3.12.35.ebuild,
  gentoo-sources-3.14.27.ebuild:
  Drop MIPS back to ~testing

*gentoo-sources-3.10.67 (30 Jan 2015)

  30 Jan 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.67.ebuild:
  Linux patch 3.10.67

*gentoo-sources-3.14.31 (30 Jan 2015)

  30 Jan 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.31.ebuild:
  Linux patch 3.14.31

*gentoo-sources-3.18.5 (30 Jan 2015)

  30 Jan 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.18.5.ebuild:
  Linux patch 3.18.5

*gentoo-sources-3.18.4 (29 Jan 2015)

  29 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  +gentoo-sources-3.18.4.ebuild:
  Linux patch 3.18.4

*gentoo-sources-3.14.30 (29 Jan 2015)

  29 Jan 2015; Anthony G. Basile <blueness@gentoo.org>
  +gentoo-sources-3.14.30.ebuild:
  Linux patch 3.14.30

*gentoo-sources-3.10.66 (28 Jan 2015)

  28 Jan 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.66.ebuild:
  Linux patch 3.10.66

  28 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gentoo-sources-3.17.7.ebuild:
  Stable for ppc, wrt bug #532934

  17 Jan 2015; Mike Pagano <mpagano@gentoo.org> gentoo-sources-3.10.65.ebuild:
  Correct genpatches version.

*gentoo-sources-3.10.65 (17 Jan 2015)

  17 Jan 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.10.65.ebuild:
  Linux patch 3.10.65

*gentoo-sources-3.14.29 (17 Jan 2015)

  17 Jan 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.14.29.ebuild:
  Linux patch 3.14.29

*gentoo-sources-3.18.3 (16 Jan 2015)

  16 Jan 2015; Mike Pagano <mpagano@gentoo.org> +gentoo-sources-3.18.3.ebuild:
  Linux patch 3.18.3

*gentoo-sources-3.17.8-r1 (16 Jan 2015)
