@@ -4,7 +4,7 @@ DESCRIPTION=Full sources including the Gentoo patchset for the 3.17 kernel tree
 EAPI=5
 HOMEPAGE=http://dev.gentoo.org/~mpagano/genpatches
 IUSE=deblob experimental symlink build
-KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86
+KEYWORDS=alpha amd64 ~arm ~arm64 hppa ~ia64 ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86
 LICENSE=GPL-2 freedist
 PDEPEND=!build? ( virtual/dev-manager )
 RDEPEND=!build? ( >=sys-libs/ncurses-5.2 sys-devel/make dev-lang/perl sys-devel/bc )
@@ -12,4 +12,4 @@ RESTRICT=binchecks strip
 SLOT=3.17.8-r1
 SRC_URI=mirror://kernel/linux/kernel/v3.x/linux-3.17.tar.xz mirror://gentoo/genpatches-3.17-12.base.tar.xz mirror://gentoo/genpatches-3.17-12.extras.tar.xz experimental? ( mirror://gentoo/genpatches-3.17-12.experimental.tar.xz )
 _eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	kernel-2	e0363401e3e385deca89bb9a22b528bb	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python-any-r1	da352ea9da8eb9bf158d56cca65d6c82	python-utils-r1	7d5f4ad9ba85664d8c5f56041a70f4c3	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=e62b65e6575261f4e359f5301f93ae2c
+_md5_=d9af8ff616069a999eca067bb304f740
