@@ -34,9 +34,6 @@ DIST genpatches-3.14-35.extras.tar.xz 18268 SHA256 cf91781b61cde43c9831fad551bb9
 DIST genpatches-3.14-36.base.tar.xz 805448 SHA256 4cdd35278b196080c8a9fc30b8cb07e4e8c60cbc54218c5d59b07e2e523cb364 SHA512 e34aba208fd3ba387f501860c0aa5520cec15dd1f6e6fe51b0c643077ed3c1945f42ef2377e2c4f0d4d8ff26533096b89e2123bd25d6220ec9ce4df5035af167 WHIRLPOOL 332ff0ddfa51a14315a3189ab85a86dccaa171f4fcccf7432e7762e593a9c7fc3a566a9c82efac84ed58621789269c96fe7e985e5bcfc83d74f352928866c179
 DIST genpatches-3.14-36.experimental.tar.xz 60308 SHA256 06a1ef4ff6d5dca61f150ae4f41793b2e35799ba41f78905633790f5f5d0ea75 SHA512 4b62a5f96486a22c40432e0e05e598e80a4597c30604607e20e14c6d5c9cc170a26fd451325d96340a3328aa44ff0ca6f39a122051cf47ba9160391b7bf03aa1 WHIRLPOOL 68e25da62bb7e514342140fc56921a7f0aa19e8860754362be38b985ae0d21a275e9353a7da38769ae3d54b97bc17226e967b1eca9c2910087c5db15a0cf5c59
 DIST genpatches-3.14-36.extras.tar.xz 18256 SHA256 8e14041217bece6dddb3b5d181f20b3998a9464549dfc56c7e06a60024653df4 SHA512 58b6cbd1dbfdcdd0fef6b217a22ea6341980cc014bd88b7a9ff255ac79f7b0db5498619ee7763ae45adb4f0ec6f2072d56b780083c21be56dcf6f3e821cd666a WHIRLPOOL 819bdb68c587df7e66cd64cdd0d9ae134120b5f120cbf24668e156402be570589e0bd2b84e24308aa4d68d56cf56e07d5ed600bb21b22c33dab5492acdc0349f
-DIST genpatches-3.17-10.base.tar.xz 267104 SHA256 13aac5abe12473ee7da706c290683d9c1422d240aad5f12ac72eadc9d58ef3a7 SHA512 62218374c929f56085b1481f6726fd3b196e4f0fcf2a7ddcd48cffb2d919850cfe05514d786c31c30dbf9dce2ec590a55b09a4dc731f411dd8498d384b5b974b WHIRLPOOL 006fa4dd94aa155403c6f4e85b2cef5034fbd929bdf4c52ab64a712de93ab25a0ac0ad08bde51b5a21de834f37f016a0db0f1c598af455ed5db1364ff23d1498
-DIST genpatches-3.17-10.experimental.tar.xz 59948 SHA256 ffb533554c635199ac0a5460be9a6d2279ac62eaa6cd7889d6378911d2a36373 SHA512 b3fbb7bea9a2ab0802ca45f3147573c7329ffea86905479de1760ef973a8e5255d1f1968861b1d1592834187661fe1c36fc93da34fc255723e474d68f35f8d3f WHIRLPOOL ff3fd2efea5c449eb800d749daeedf2ea6c4a70d5b4f90ca18a2087b606e1ac16ecb87ba0ae9871b249b42be69433d3a24578713d606a5a32e08d193bd943cc6
-DIST genpatches-3.17-10.extras.tar.xz 16160 SHA256 d06aaaf8c3b6dcb5b26e98c10ef74298deb54b4eb568b7f166f1f74657ca9eab SHA512 0eaf570c95b0fff7ce06094e301bc2cd672e30717c5767330b4daf5a69f4c5243c82f5811ef3fdf739c4d737fb05c5053b9d6719ba4bdad7d941060992b88782 WHIRLPOOL 6a52af804ceea17d6e0706469287197ae29ea072031f7af9db96c223e3aea6951e1ba43e0d1de7176825b8b70583db1b0543718190a6315077d3e1fab2188968
 DIST genpatches-3.17-11.base.tar.xz 288148 SHA256 e309fc4e6a73ad390a8579f507bd5ec22e0265da47029e12d115b5ea0ab3a751 SHA512 f3591f662a48bf8542e7c01fade0d7626a6eaddb37889dc815446933a5b5546cf33f42c5443112291f1eb421cd8a4c8848d69de7ef46197e9c4a85892c84114f WHIRLPOOL a725fbab9e0a3ced29c756182c24d227e0d3b3aa551624c78daed4d3fa38795ac8db7a586cea518d590430d225eaddf519bd78988496cc7536f9baab4bd7bd75
 DIST genpatches-3.17-11.experimental.tar.xz 60328 SHA256 e0f361729c618f3855361b9a1b85b1cb37d188b21f25db7d1a8686e4758b476c SHA512 65bc0b710f7f6215681f08f03aea5348c73651f06f40a4a5e6078fc2301cbfe537bdbde7a0cc76672822450cb9724a94b6aa94a4887622788106e2ca6e802722 WHIRLPOOL eaae0c5537c02a4ee63d5919a0ef8f3272d5fd94f0cd3ecce04580c430cdf7e1020fcc5c80dc21fc12cb64094da60354a6223256eaa988f59382120afffbbf14
 DIST genpatches-3.17-11.extras.tar.xz 16188 SHA256 59aeeab0543dd91400a2d46811b3fb0281c21055c058a7669b0f9700ed5dead0 SHA512 50fd52c8d6851b69bc54b6c776afe26b61bf58f4e0c6c38bd54b3f1d3d9ca9854c2227836d5ce0eed16fd741e7e2109e2fc6e19c799fc7fa4cc0684140be5aa0 WHIRLPOOL f0417e2d424a1eea33c4c3e7de588ff3bb60008ca0b865d6fab64423dcf73d0d15625cf6fdc3817d623f0afe548492539e67c7c62fff23d19162cc7a5a905a6a
@@ -82,8 +79,7 @@ EBUILD gentoo-sources-3.14.28.ebuild 901 SHA256 25a29a26c2fa0228ea1cdec5df57ad83
 EBUILD gentoo-sources-3.14.29.ebuild 901 SHA256 021138232faca13ab1cf765654b5053aa8ac86d0b28f631764244d1354b961a9 SHA512 ada7616fd478c06f999a5f00ab25c2ebf89db6265f6e0ac855ef9a7a10459d24515082ddf872f878b90a3d7ea0fd9922e31d4e179347b74d478d3a71cf5fcc71 WHIRLPOOL 6575ab62dd09af149a05ebbf02b2edaab22ab468744bb031dc3c15a26f30478909006362195e39d32f07bac135a3c0db674f99affa8d97ffa1a2fd484111f62c
 EBUILD gentoo-sources-3.14.30.ebuild 902 SHA256 5d7a6953dd3ec6702b5b03dda2aec80943179e8b0a55f57595a6feac60a09e5a SHA512 49e3db217e281cac4bd3c53f7f6c0cf193cd59d98d17a27e37448654df421ef3acce9a853e880eb4b97806281f58bc1ade4740a044e5a5c778e76b90d4f2bdaa WHIRLPOOL d680ceb7b9de4ff1994e580ac28b75206d6055aeeb66fffd1fd2fb4f94b3b8956ad038286089da7b35f39f97570d73750a28541e632f6190e43d5a86d14382f3
 EBUILD gentoo-sources-3.14.31.ebuild 901 SHA256 05794e038013ec265a1091091685958f346e0a619e86e47f1b15d284f118147f SHA512 d9827593e0305966002bf8f2d2b38734532566b9d325a0d34c9e59121cf0ada3942922402502caca71bccf840c97a24a4808bd51b394e92a4eced521600e9590 WHIRLPOOL 353651ba66887ed7e28a8351aa62214b8dc08a5ed048431b4efdd92167463f3eab7265c1cf359581767f71d1669799c1e389f0a626a4f0812502bcbb35fb715f
-EBUILD gentoo-sources-3.17.7.ebuild 891 SHA256 53bb02b25445fbc01bd80d76693d53a32690bfa37cc08fc57622de93c47ef376 SHA512 00476ccbe7a89747de7b20229a7e2c473930aa97e8b44d1a5a794b37c7ff574d0ec17190e892ae4e686dd2eed48795433a957ad155586e7f81cb81b95e491b98 WHIRLPOOL eba7bec5ca130711f4fb03a0445d3045a72dce2944b59c00371e5cc4c3c63aa40886580e44d345f57883fd2ca907f5ac65461bc9927354d0dec3474d8620a84b
-EBUILD gentoo-sources-3.17.8-r1.ebuild 903 SHA256 aa6a38481bd532452aa221816a68823f96e626916e37254c647fc0f9df40d95f SHA512 4566246fbd43c6a2f7d34338f8dad6b8cf61cf2952e86382f9ff72425bb0a0cee8358229c598a2611b01fc5cb717a0f7672cfe4a41c6f682a0c317dd6bfc51ed WHIRLPOOL e920fd8f3be569c8a332aae767cf066dc8e23cec95efb63b9fbfce994fd0c9092c6f0f251095289adc8d7ffb34144761e9998d874792112b55d42e4faf3e075e
+EBUILD gentoo-sources-3.17.8-r1.ebuild 898 SHA256 e0005b362d318c5d2a16f15d9e98c6ff585d1c25dd55d0d7cef1d2d0b15ba2b2 SHA512 06416182e69eaa311df041eb30b80e2d2a04aa7e2a22dd9735991e87e34bc3192badd610cde2e2fcd335872306e3e25cb0b7cb89e8e06cdc0fa5fdb4477827e2 WHIRLPOOL 7c30d8127efa3bedd567e6815caf3a5ae9805bd7a060723fa512212415f1cc323e27176a3731aa150b7e8802de1ec99a7e4721131a751153d27874454a2ac4d1
 EBUILD gentoo-sources-3.17.8.ebuild 900 SHA256 34ae18e6967aaffcec8ec3175a405f75d627639245f11d7d0972db5c20e7dcd5 SHA512 59e809afcb758ed162c49c223eb2963acf5642eb22c8f0d8ad13b20ac96878f7f61b3a832a08b4d2d244a10585fb74032bb079fe9440514153ad47a0fd453efe WHIRLPOOL c1d0f26e4986d08d443bf800047476ab8427b016b9281590bdcbcf0ac3def33eb11110721273f45b51df54757e5b2aa28ef8b55682e646df3185688d7c5399ce
 EBUILD gentoo-sources-3.18.0.ebuild 899 SHA256 61a7b264837ec0fe114b87dd1d924c5f59f04c564e685c74703681a009ebab02 SHA512 43d56c412caf376fad92f433a0248eb0b46dfc50302d3db9f7eb0638b570592ef64fba24d771f1408f8a42915b3c7b7262b92a30023bf6e58f4f77ee076d7e07 WHIRLPOOL 1b613095abfa821e367249f2645d8673b51cf26cc9325f3976152f1a9ba52b9109e783fe6632ad24ce29f83f8865edeed7e369773d2f24cbe996ae1ae56dbc67
 EBUILD gentoo-sources-3.18.1.ebuild 899 SHA256 202bbfc9b332140e753d2b3698f78edf662377b55138ab4ea1f5d54c5dd00779 SHA512 30f244f28058cd97e70586dccbeec8b8aac9813388b7d2917b1f0778a62de318fa399705102c8a0bf02792c43b0a3686705e5b78740201effda9fd4f54d9733b WHIRLPOOL 344137562213d86e09e0d70b987c2e5467912558f975782462e57f6490e3f4c3451539675d59bb105ce8a4bad7353c2648ffaa79e32b1eea3e90d238daa6d836
@@ -93,26 +89,14 @@ EBUILD gentoo-sources-3.18.4.ebuild 900 SHA256 2e269bd51debd29432d0cf5889339fc22
 EBUILD gentoo-sources-3.18.5.ebuild 899 SHA256 ff3154285fa2d7c54e0b7a94cb4f98b52920c4e38258374803bbe02155c5f2f7 SHA512 df27caa4e5a6777dc332bc3e63f0b361ba3dcda13edefadef4a65818ccedafed81f7d7e05489352f307dfbf0542ef9a9d5d8314e04526b5ea4ed63eaf915810a WHIRLPOOL 02c5d744a35cd86d79dea583aa6ec0d985e650e62b647d0f29f1b99887d989ae429cbf4fbfab7354d61f65ae7223a1b1b5193fba9ee20d83a93e75189018ce12
 EBUILD gentoo-sources-3.4.105.ebuild 862 SHA256 14eb4f85d3cb39f1acd3d08243767db2fb6b6f90ab8b1d027dea65403d54039b SHA512 7d3069c88315a468af45c9be93737ecc3e37da77e84be33f00287ede180bf686925926adbc4390ccc6877242ab72ab2d1dcc733369c1415be43de883ff662240 WHIRLPOOL ee0c379a117cabc44de227c7028771030a872a97106c1d2b7a3d6005531fb3b0508f2cdda99eaa78d3c8ec9c7130db95350415bc2bd3a63bb1bbb7a5e555132c
 EBUILD gentoo-sources-3.4.9999.ebuild 2262 SHA256 5c40a937692469c313f62bc8aa6909f78b65d98b7e8865e66c4b4fd9f51c40aa SHA512 f896d03460b4c2a470a94cc250d4e4970a7e7f6293e36cb407ecd767f147ef858790a4fb5535d4aa9ea24edc5cee8e87c529c72b32fd4016c0d74dfcc8711caa WHIRLPOOL 7d8c2db2f783641e744d4ade8328a2f2869edab5a8c7291a35e14a497dbcfb5b5430f86fba6ef91645433fafaae21497a851519f7f44234e3dbe39b161c61d5e
-MISC ChangeLog 96196 SHA256 65c09afbea68ee7101209d24922061a5b36d146fa8acddfefcfe2ecc5be0d884 SHA512 abef09d926a3693343facb036a2f9d0c92119f35d5c1bd821af5c530e35db5f570854f91ec9487476fb3805ba806b0efd23cadc5553e74e07f085a890ab54e0d WHIRLPOOL fe893e565fe50bd5b11c6588f6aeb49c6b908410a5fe47a66afc672c0694375972bb1fa2d0873e5f91579b2c6f9e870f78f3a1b874bb60137c3db302f62ade19
+MISC ChangeLog 96365 SHA256 de52cd179b9bd0565eeb6de82baff9d7d96e32f4a39f698d78a845a0a42c1677 SHA512 c53e2ac9434deb8abc41843f15c685f79738d25d6a41669b2f7202eb0209770c4f362adca16a579aa11a6c843961dfb18b1e08db9e0e6f741870ada22ce358cc WHIRLPOOL 093f61219e394a300469cfb5fcc21d1c2865c6fb4c04f527d15ab96e445fd7e83cba18301dcc8aae0268a3e4a940367dccde387ee45c51f4d10120be03caa357
 MISC ChangeLog-2007 91971 SHA256 8c37498df2246749abb2fd1eca05c396257989b91ba5ec0f83cedb25488118a9 SHA512 2215a9856bc1706abe21ad51d0af6176fec226e85a56ad8f54664d20a041bbe076359347f473a87c47904df2d8d2006d56d1535528b2eb7aa756f96ad9554876 WHIRLPOOL dd881fa7bbfc42ca35a46a0fe01d751b3373ac8f4e2ce5626ff26f94244d729e107f57b1be43daf3b73c2f18b090ee896d8a5eb38888fa9ca01097d1cbd46da7
 MISC ChangeLog-2012 101665 SHA256 a60304f93fc4644cdf0b068e586f6036d4463ea4b21bd745a8aa926da71db6ec SHA512 892085806f4c87f64db78e04d3c215ae6bca8939ffeced8a3792fe4a2476e72d2cc9dbc8a3b906943971eb853c337847e6a8bf976f9496be9944e216fb983234 WHIRLPOOL 590f17b5a90f48fa1733959500ce06fd72f95524b64b6abf508653a616961af2c0ea04ca2dbfe5523ff9dcd3bc67b3b24bc368eb84326d091ca449e558555f46
 MISC metadata.xml 512 SHA256 80143273f4462ac67194f8ef90706e5ebf65f3f30ff153b7ee19d2c155f49f7b SHA512 6262ba3cbc6480081a195024fc752ad0df27afe9b71d626d759f747a52a2a181d114379e463bd8741a843622556c1e46820e535e8fbe71e2790828370d70c5f0 WHIRLPOOL b4430c0590efa2c5cbfc85fed1386943f4c8d101dfc07a76ba79c37b1fe2fe4db21f65b58186e1cad1ea3987292c2ea0251f0e2017be018c020f7e2309b57bd1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJUzCAmXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88QCsQALAUriheSBWbucWoxLMQv7/e
-BxgqJ3oU0j1ZmUpDsU2BAgfgSijfRyTPIzMRBhmZZ7E89hvZQyG0fJTAuTdfzCka
-B1v/X8PjVpn6ZWMQE8bIwOgrQ2g7NqtazGrV7jPGGmjH2sVyY4zhviJy8hPduY6U
-egTrxW07Dj8KK2f+QWxLuBgfppM/MBgB8+/lvSpFAG6tppC7LdEJil5JSbLUNzl9
-xWCSHZjb/STmT+6vl2vhVx7JgQc7NvYq9RtTJNW56+KJ+QOvX/x24BeMVTQLTMMG
-nzs0YzXZdJlIrv3+QU4VxEZi42rtj2acWs3TwNXfJDkGQb7SBrcD0CuEU8NnylM6
-pHAUi4uMEWcP3QHl6ZWPoaQf/jRHkqbSbm4K8hJGsXqU0G6T9erg0M7fFKwtBrRc
-V0wcvC4IgoRPawbZLuk9LLI+0VqmpMhDo/JjsYpKs1lWf6quR2Cx6lbmt6BTtfyU
-CO0Px4DlywE26zkHhHUoCvMPaIjsKVf3VFHKERq67gN7gOYHmxywA+8VS1oUJ56o
-eck9xS25NEAKBh76oruhzSx1o+Q+EcajDAjgp0H1odX5QAevQEOtq40f4jC99ro4
-ChB5e67GwpHcxDKVaoSvSfHC4Zvngg4thOEngfqMDtjlPPhtQ39SjrzueJnEBBVV
-nGzIv+EXDABiXnLCZTIj
-=m07o
+iEYEAREIAAYFAlTMJWUACgkQPDPGULV25ONFZQCdH9XpSs0zpYnFTRoe49li3091
+9f0AnAiIoqJNCnObap/wBqH3BwyRA5W8
+=JSXO
 -----END PGP SIGNATURE-----
