@@ -1,29 +1,0 @@
-# Copyright 1999-2015 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/gentoo-sources/gentoo-sources-3.17.7.ebuild,v 1.8 2015/01/28 10:28:05 ago Exp $
-
-EAPI="5"
-ETYPE="sources"
-K_WANT_GENPATCHES="base extras experimental"
-K_GENPATCHES_VER="10"
-K_DEBLOB_AVAILABLE="0"
-inherit kernel-2
-detect_version
-detect_arch
-
-KEYWORDS="alpha amd64 ~arm ~arm64 hppa ~ia64 ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86"
-HOMEPAGE="http://dev.gentoo.org/~mpagano/genpatches"
-IUSE="deblob experimental"
-
-DESCRIPTION="Full sources including the Gentoo patchset for the ${KV_MAJOR}.${KV_MINOR} kernel tree"
-SRC_URI="${KERNEL_URI} ${GENPATCHES_URI} ${ARCH_URI}"
-
-pkg_postinst() {
-	kernel-2_pkg_postinst
-	einfo "For more info on this patchset, and how to report problems, see:"
-	einfo "${HOMEPAGE}"
-}
-
-pkg_postrm() {
-	kernel-2_pkg_postrm
-}
